# enc-dec

./: .gitignore  README.md  REVIEW.md  architecture.drawio  exercice.py  exercice_pytorch.py  exercise.ipynb  pyproject.toml  test_model.py
