[project]
name = "enc-dec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gempy>=2025.2.0",
    "ipykernel>=7.1.0",
    "lets-plot>=4.8.2",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "scipy>=1.17.0",
    "simpeg>=0.25.0",
    "torch>=2.10.0",
]
